--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -8,8 +8,31 @@
 <script>
     let current_group;
 
+    function sendCompanyGroupRequest(id){
+        let my_data = null;
+
+        $.ajax(
+        {
+            url: `/chat/send/request/group/company/${id}/`,
+            dataType: "json",
+            async: false,
+            success: function(data)
+            {
+                my_data = data;
+            }
+
+        });
+        document.location.reload();
+        return my_data['status'];
+
+    }
+
     function setGroup(groupName,user_img_url, img_url,groupId=null,groupInfo=null, groupTitleName=null, daysRemaining=null)
     {
+        if(checkCompanyGroupValid(groupId) === false) {
+            alert("you are not authorized to this group, send request to admin");
+            return;
+        }
         if($('#chat-panel-show-id').is(":hidden"))
             $('#chat-panel-show-id').show();
         $('#chatPanel-image').prop("src",user_img_url);
@@ -89,6 +112,15 @@
                 createGroupMember(data);
             },
         });
+
+        url = `/chat/group/pending/member/list/${id}/`;
+        $.ajax({
+            url: url,
+            success: function(data){
+                console.log(data, "asdsadfasdfads");
+                createGroupPendingMember(data);
+            },
+        });
         return returnData;
     }
     function createGroupMember(data){
@@ -119,7 +151,6 @@
             let email = splitData[1];
             let admin = splitData[2];
             let username = splitData[3]
-            // mem -> means the member we currently iterating over.
             const isCreator = current_user_email === createdBy;
             const memIsCurrentUser = current_user_email === email;
             const memIsAdmin = admin === "true";
@@ -212,6 +243,117 @@
         }
     }
 
+    function createGroupPendingMember(data)
+    {
+
+        let group_list_tag = $('#pending-group-list');
+        group_list_tag.empty();
+        let html = '';
+        let current_user_email = "{{ request.user.email }}";
+        let html2 = ''
+        $('#offcanvas_group_members').empty();
+        let isCurrentUserAdmin = false;
+        for (const [key, value] of Object.entries(data['member_list'])){
+            const boolEmail = value.split(',')[1] === current_user_email;
+            const boolAdmin = value.split(',')[2] === 'true';
+            if (boolEmail && boolAdmin){
+                isCurrentUserAdmin = true;
+                break;
+            }
+        }
+        // Only show add member option to admins
+        isCurrentUserAdmin ? $('#add-member-to-group').show():$('#add-member-to-group').hide()
+        $.each(data['member_list'], function(k,v){
+            let userId = k;
+            let groupId = data['group_id'];
+            let splitData = v.split(",");
+            let createdBy = data['created_by'].split(",")[1];
+            let name = splitData[0];
+            let email = splitData[1];
+            let admin = splitData[2];
+            let username = splitData[3]
+            const isCreator = true;
+            const memIsCurrentUser = true;
+            const memIsAdmin = false;
+            createOffcanvasGroupPendingMembers({memIsAdmin, memIsCurrentUser, groupId, userId, name, email, username, isCreator, isCurrentUserAdmin})
+
+            html += `<li>${name} &nbsp;&nbsp;<a onclick="deleteGroup(${groupId})" href='#'>Delete Group</a></li>`;
+
+        });
+        group_list_tag.append(html);
+        $('#offcanvas_group_members').append(html2);
+
+        function createOffcanvasGroupPendingMembers(o) {
+            console.log(o);
+            html2 += `
+            <div class="row align-items-center gx-5 p-3">
+                <div class="col">
+                    <h5><a href="#"></a>${o.name}</h5>
+                    <p>${o.username}</p>
+                </div>
+
+                <div class="col-auto">
+                    <span class="extra-small text-primary">${o.memIsAdmin?'Admin':''}</span>
+                </div>
+
+                <div class="col-auto" style="${!o.isCurrentUserAdmin && !o.memIsCurrentUser ? `display:none`: ''}">
+                    <div class="dropdown">
+                        <a class="icon text-muted" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
+                        </a>
+
+                        <ul class="dropdown-menu">
+
+                            ${o.isCurrentUserAdmin ?
+                                !o.memIsCurrentUser ? `
+                                <li>
+                                    <a class="dropdown-item d-flex align-items-center text-danger" onclick="deleteMember(this, ${o.groupId}, ${o.userId})" href="#">
+                                        Remove Member
+                                        <div class="icon ms-auto">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                ` : `
+                                <li onclick="deleteGroup(${o.groupId})">
+                                    <a class="dropdown-item d-flex align-items-center text-danger" href="#">
+                                        Group Delete
+                                        <div class="icon ms-auto">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                `
+
+                            : o.memIsCurrentUser ?`
+                                <li>
+                                    <a class="dropdown-item d-flex align-items-center text-danger" onclick="leaveGroup(this, ${o.groupId}, ${o.userId})" href="#">
+                                        Leave Group
+                                        <div class="icon ms-auto">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                                        </div>
+                                    </a>
+                                </li>
+                                ` : ''
+                            }
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            `
+        }
+    }
+
+    function approveMemberToCodeRoom(groupId, memberId)
+    {
+        let url = `add/company/group/member/${groupId}/${memberId}/`;
+        $.ajax({
+            url: url,
+            success: function(data){
+                console.log(data);
+            },
+        });
+    }
 
 
     function removeFromGroup(id)
