--- a/chat/templates/chat/modal.html
+++ b/chat/templates/chat/modal.html
@@ -501,9 +501,6 @@
                                 <div class="row align-items-center gx-6">
                                     <div class="col">
                                         <h5 class="mb-4">Members</h5>
-                                        {% comment %}
-                                        <!-- <p id="receiver_phone"></p> -->
-                                        {% endcomment %}
                                     </div>
 
                                     <div class="col-auto mb-4">
@@ -535,45 +532,47 @@
                                     </style>
                                 </div>
                             </li>
+
+
+
+
+
+                        <li class="list-group-item">
+                                <div class="row align-items-center gx-6">
+                                    <div class="col">
+                                        <h5 class="mb-4">Pending Request</h5>
+                                    </div>
+
+
+
+                                    <div class="col-12">
+                                        <ul id="pending-group-list" style="list-style-type: none; padding-left: 0;"></ul>
+                                    </div>
+                                    <style>
+                                        #group-list > li {
+                                            margin-bottom: .8rem;
+                                            display: flex;
+                                            align-items: center;
+                                        }
+                                        #group-list li > a {
+                                            margin-left: auto;
+                                            border: 1px solid #DC4535;
+                                            border-radius: .2rem;
+                                            padding: 0.3rem 1rem;
+                                            color: #DC4535;
+                                        }
+                                        #group-list li > a:hover{
+                                            background-color: #DC4535;
+                                            color: white;
+                                        }
+                                    </style>
+                                </div>
+                            </li>
                         </ul>
-                        <!-- List  -->
-                        <!-- <hr class="hr-bold modal-gx-n my-0"> -->
-
-                        <!-- List -->
-{#                        <ul class="list-group list-group-flush">#}
-{#                            <li class="list-group-item">#}
-{#                                <div class="row align-items-center gx-6">#}
-{#                                    <div class="col">#}
-{#                                        <h5>Active status</h5>#}
-{#                                        <p>Show when you're active.</p>#}
-{#                                    </div>#}
-{##}
-{#                                    <div class="col-auto">#}
-{#                                        <div class="form-check form-switch">#}
-{#                                            <input class="form-check-input" type="checkbox" id="profile-status" checked>#}
-{#                                            <label class="form-check-label" for="profile-status"></label>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                            </li>#}
-{#                        </ul>#}
-                        <!-- List -->
-
-                        <!-- <hr class="hr-bold modal-gx-n my-0"> -->
-
-                        <!-- List -->
                         <ul class="list-group list-group-flush">
-                            <!-- <li class="list-group-item">
-                                <a href="" id="receiver_profile_url" class="text-reset" data-theme-toggle="tab" title="Profile" data-bs-dismiss="modal">View Profile</a>
-                            </li> -->
 
-{#                            <li class="list-group-item">#}
-{#                                <a href="#" class="text-danger">Logout</a>#}
-{#                            </li>#}
                         </ul>
-                        <!-- List -->
                     </div>
-                    <!-- Modal body -->
 
                 </div>
             </div>
