--- a/chat/templates/chat/tab_content_chats.html
+++ b/chat/templates/chat/tab_content_chats.html
@@ -147,6 +147,7 @@
                                                     </div>
 
 {#                                             ############### this line sploil css of the group   #}
+                                                {% if object.company %}
                                                     <div class="col-auto">
                                                             <!-- Dropdown -->
                                                             <div class="dropdown">
@@ -164,6 +165,7 @@
                                                                 </ul>
                                                             </div>
                                                         </div>
+                                                {% endif %}
 {#                                             ############### this line sploil css of the group   #}
                                                 </div>
                                             </div><!-- .card-body -->
