show coderoom size on chat room

--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -754,7 +754,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="col-auto open-notebook" title="Available Size">
+                                                <div class="col-auto open-notebook" title="Available Size" style="display: none" id="size_panel">
                                                     <div class="btn btn-sm btn-primary" id="available_size">
 
                                                     </div>
