--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -706,10 +706,10 @@
                                 <!-- Mobile: close -->
 
                                 <!-- Content -->
-                                <div class="col-7 col-xl-12">
+                                <div class="col-12">
                                     <div class="row align-items-center text-center text-xl-start">
                                         <!-- Title -->
-                                        <div class="col-12 col-xl-6">
+                                        <div class="col-2 col-xl-3">
                                             <div class="row align-items-center gx-5">
                                                 <div class="col-auto">
                                                     <div class="avatar d-none d-xl-inline-block">
@@ -728,54 +728,39 @@
                                         <!-- Title -->
 
                                         <!-- Toolbar -->
-                                        <div class="col-xl-6 d-none d-xl-block">
-                                            <div class="row align-items-center justify-content-end gx-6">
-                                                <div class="col-auto d-none">
-                                                    <form id="video_call_form" method="post" action="{% url 'chat:video-call' %}">
-                                                        <input type="hidden" name="group_id" value="" id="set_group_id_for_video">
-                                                        {% csrf_token %}
-                                                        <button type="submit" class="btn btn-sm btn-primary py-3 px-4" title="Start Video Call">
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg>
-                                                        </button>
-                                                    </form>
-                                                </div>
-                                                
+                                        <div class="col-9 d-flex flex-row-reverse">
+                                            <div class="row align-items-end justify-content-end gx-6">
 
-                                                <div class="col-auto" id="show_left_days_div" style="display: none">
-                                                        <button type="button" disabled class="btn btn-sm btn-primary py-3 px-4" title="Days Left">
+                                                <div class="col-2" id="show_left_days_div" style="display: none;">
+                                                        <button type="button" disabled class="btn btn-sm btn-primary py-3" title="Days Left">
                                                         <span id="days_left"></span>
                                                         </button>
                                                 </div>
 
-                                                <div class="col-auto open-notebook" title="Open Code Room" onclick="redirectNotebook()">
+                                                <div class="col-2 open-notebook" title="Open Code Room" onclick="redirectNotebook()">
                                                     <div class="btn btn-sm btn-primary">
-                                                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg> -->
                                                         Open Code Room
                                                     </div>
                                                 </div>
 
-                                                <div class="col-auto open-notebook" title="Available Size" style="display: none" id="size_panel">
+                                                <div class="col-2" title="Available Size" style="display: none" id="size_panel">
                                                     <div class="btn btn-sm btn-primary" id="available_size">
-
                                                     </div>
                                                 </div>
 
-                                                <div class="col-auto" id="show-buy-plan-btn" style="display: none;" title="Buy new plan" onclick="get_plan_id()">
-                                                    <div class="btn btn-sm btn-primary">
-                                                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg> -->
-                                                        Renew plan
-                                                    </div>
+                                                <div class="col-2" id="show-buy-plan-btn" style="display: block;" disabled title="Buy new plan" >
+                                                    <button type="button" disabled class="btn btn-sm btn-primary py-3" title="Buy New Plan" data-bs-toggle="modal" data-bs-target="#more-storage">
+                                                        <span>Renew Plan</span>
+                                                        </button>
                                                 </div>
 
-                                                <div class="col-auto">
+                                                <div class="col-1">
                                                     <a href="#" class="icon icon-lg text-muted" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-more" aria-controls="offcanvas-more">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
                                                     </a>
                                                 </div>
 
-
-
-                                                <div class="col-auto">
+                                                <div class="col-1">
                                                     <div class="avatar-group">
                                                         <a href="#" class="avatar avatar-sm" data-bs-toggle="modal" data-bs-target="#modal-sender">
                                                             <img class="avatar-img" style="object-fit: cover;" id="sender_img_preview_id"  alt="#">
@@ -790,32 +775,13 @@
 
                                                 </div>
 
-                                                <div class="col-auto">
+                                                <div class="col-1">
                                                     <div class="dropdown">
                                                         <a class="icon text-muted" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
                                                         </a>
 
                                                         <ul class="dropdown-menu">
-                                                            <!-- <li>
-                                                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                                                    <span class="me-auto">Edit</span>
-                                                                    <div class="icon">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg>
-                                                                    </div>
-                                                                </a>
-                                                            </li>
-                                                            <li>
-                                                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                                                    <span class="me-auto">Reply</span>
-                                                                    <div class="icon">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-corner-up-left"><polyline points="9 14 4 9 9 4"></polyline><path d="M20 20v-7a4 4 0 0 0-4-4H4"></path></svg>
-                                                                    </div>
-                                                                </a>
-                                                            </li>
-                                                            <li>
-                                                                <hr class="dropdown-divider">
-                                                            </li> -->
                                                             <li>
                                                                 <a class="dropdown-item d-flex align-items-center text-danger" href="#" onclick="deleteSelectedChat()">
                                                                     <span class="me-auto">Delete Selected &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
