testing coderoom blank space

--- a/chat/templates/chat/tab_content_chats.html
+++ b/chat/templates/chat/tab_content_chats.html
@@ -95,6 +95,7 @@
                                             </div><!-- .card-body -->
                                         </a>
                                         {% endfor %}
+                                        <h1>{{ group_list }}</h1>
                                         {% for object in group_list %}
                                         <div style="cursor:pointer;background: rgba(49, 133, 252, 0.14);"
                                             class="card border-0 text-reset">
