buy more storage

--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -94,14 +94,21 @@
             $('#show-buy-plan-btn button').attr('disabled', true);
         }
 
-        if(isCompanyCodeRoom!=null)
+        if(isCompanyCodeRoom===null || isCompanyCodeRoom==='None')
         {
             $('#show-buy-plan-btn button').text("Renew Plan");
+            $('#show-buy-plan-btn button').attr('disabled', false);
+            $('#show-buy-plan-btn button').attr('title', 'Renew Plan');
+            $('#show-buy-plan-btn').attr('onclick', 'get_plan_id()');
+            $('#show-buy-plan-btn button').attr('data-bs-target', '');
+
         }
         else{
             $('#show-buy-plan-btn button').text("Buy More Storage");
             $('#show-buy-plan-btn button').attr('disabled', false);
             $('#show-buy-plan-btn button').attr('title', 'Buy more storage');
+            $('#show-buy-plan-btn').attr('onclick', '');
+            $('#show-buy-plan-btn button').attr('data-bs-target', '#more-storage');
 
         }
 
