--- a/order/templates/order/payment_redirect_more.html
+++ b/order/templates/order/payment_redirect_more.html
@@ -31,11 +31,11 @@
             <input type="hidden" name="state" value="{{ posted.state }}" /></td>
             <input type="hidden" name="country" value="{{ posted.country }}" /></td>
             <input type="hidden" name="zipcode" value="{{ posted.zipcode }}" /></td>
-<input type="hidden" name="surl" value="http://127.0.0.1:8000/order/more/storage/payment/response/" />
-<input type="hidden" name="furl" value="http://127.0.0.1:8000/order/more/storage/payment/response/" />
+{#<input type="hidden" name="surl" value="http://127.0.0.1:8000/order/more/storage/payment/response/" />#}
+{#<input type="hidden" name="furl" value="http://127.0.0.1:8000/order/more/storage/payment/response/" />#}
 
-{#<input type="hidden" name="surl" value="https://stellar-ai.in/order/payment/response/" />#}
-{#<input type="hidden" name="furl" value="https://stellar-ai.in/order/payment/response/" />#}
+<input type="hidden" name="surl" value="https://stellar-ai.in/order/more/storage/payment/response/" />
+<input type="hidden" name="furl" value="https://stellar-ai.in/order/more/storage/payment/response/" />
 
 
 
