buy more storage

--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -728,7 +728,7 @@
                                         <!-- Title -->
 
                                         <!-- Toolbar -->
-                                        <div class="col-9 d-flex flex-row-reverse">
+                                        <div class="col-9 flex-row-reverse">
                                             <div class="row align-items-end justify-content-end gx-6">
 
                                                 <div class="col-2" id="show_left_days_div" style="display: none;">
